--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "generate-unique-id": "^2.0.1"
+    "uuid": "^8.3.2"
   }
 }
